syntax="proto3";

package greet;

option java_multiple_files = true;

message Greeting{
	string first_name = 1;
	string last_name = 2;
}

message GreetRequest{
	Greeting greeting = 1;
}

message GreetResponse{
	string result = 1;
}

service GreetService{
	//Unary
	rpc Greet(GreetRequest) returns (GreetResponse) {};
	
	//Server Streaming
	rpc GreetManytimes(GreetRequest) returns (stream GreetResponse) {};
	
	//Client Streaming
	rpc LongGreet(stream GreetRequest) returns (GreetResponse) {};
	
	//Bi-directional streaming
	rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse) {};
}

